# guslib

./: .clang-format  CMakeLists.txt  LICENSE
include/: fsm.h  queue.h  stack.h
src/: fsm.c  list.c  list.h  queue.c  stack.c  tst.c  tst.h  vector.c  vector.h
test/: fsm_test.c  list_test.c  main.c  queue_test.c  stack_test.c  tst_test.c  ut.h  vector_test.c
